maze.lessons.maze.island.IslandMaze.scala.error
Escaper:37: error: not found: value i
			i = random3()
                        ^Escaper:39: error: not found: value i
			if (i == 0) 
                            ^